Fixed white hover text on mobile nav link items in gold navbars

--- a/src/scss/_navbar.scss
+++ b/src/scss/_navbar.scss
@@ -172,7 +172,7 @@
             .dropdown-item {
               @include hover-focus {
                 @include media-breakpoint-down($breakpoint) {
-                  color: $white;
+                  background-color: rgba(0, 0, 0, .1);
                 }
               }
             }
